azure/rancher_server_resources/specs/espresso-01-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-espresso-01-service
spec:
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 30070
  - name: https
    protocol: TCP
    port: 443
    targetPort: 30071
  selector: {}
---
apiVersion: v1
kind: Endpoints
metadata:
  name: external-espresso-01-service
subsets: 
  -
    addresses:
      -
        ip: "100.80.73.93"
      -
        ip: "100.98.77.13"
      -
        ip: "100.66.78.81"
    ports:
      -
        port: 30070
        name: "http"
      -
        port: 30071
        name: "https"
