azure/rancher_server_resources/specs/traefik_dashboard_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
spec:
  ports:
  - name: http
    targetPort: 9000
    port: 80
  selector:
    app.kubernetes.io/name: traefik
