azure/rancher_server_resources/specs/rancher_ingress_routes.yaml
# Redirect to https
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: http-to-https
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
# Redirect with domain replacement
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: rancher-redirect
spec:
  redirectRegex:
    regex: ^https://(.*?)\.?${rancher_hostname}
    replacement: https://${rancher_hostname}
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: rancher-ssl-redirect
spec:
  entryPoints:
    - web
  routes:
    - match: HostRegexp(`${rancher_hostname}`, `{subdomain:^.*?}.${rancher_hostname}`)
      kind: Rule
      services:
      - name: noop@internal
        kind: TraefikService
      middlewares:
      - name: http-to-https
      priority: 10000
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: rancher-route-redirect
spec:
  entryPoints:
    - websecure
  tls:
    secretName: tls-rancher-ingress-wildcard
  routes:
    - match: HostRegexp(`{subdomain:^.*?}.${rancher_hostname}`)
      kind: Rule
      services:
      - name: noop@internal
        kind: TraefikService
      middlewares:
      - name: rancher-redirect
      priority: 1
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: rancher-route
spec:
  entryPoints:
    - websecure
  tls:
    secretName: tls-rancher-ingress-wildcard
  routes:
    - match: Host(`${rancher_hostname}`)
      kind: Rule
      services:
      - name: rancher
        passHostHeader: true
        port: 80
